top nav menu copy and js done

--- a/table.html
+++ b/table.html
@@ -195,9 +195,9 @@ $(document).ready(function(){
 	});
 
 //Detect the break point where #braGallery should become fixed position, on scroll
-var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + $('#braGallery').height();
+	var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + $('#braGallery').height();
 
-
+//Onscroll animations	
 	$(window).scroll(function(){
 		var scrolltop = $(window).scrollTop();
 		//Hide/show the scrollArrow on scroll
@@ -211,7 +211,7 @@ var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + 
 		//Hide/show and fix position of #braGallery on scroll
 		if ( scrolltop >= braGalleryBreakpoint*2) //This times 2 is a really weird hack I can't understand
 		{
-			$('#braGallery').show().css({position: 'fixed', overflow: 'visible'});
+			$('#braGallery').css({position: 'fixed', overflow: 'visible'});
 		}
 		else {
 			$('#braGallery').css({position: 'static', overflow: 'hidden'});
@@ -446,7 +446,32 @@ var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + 
 	      }
 	    });
 	    $( "#overbustLabel" ).html($( "#overbust" ).slider( "value" ) + '<span>in</span>' );
-	});	
+	});
+
+	
+	//Scroll down to elem when anchor clicked
+	function scrollToElem(anchor, elem){
+		anchor.click(function () {
+			event.preventDefault();
+			$('nav a').removeClass('highlighted');
+			$('html, body').animate(
+				{'scrollTop': elem.offset().top},
+				1000,
+				'easeInOutQuint',
+				function(){
+					$(anchor).addClass('highlighted');
+				}
+			);	
+		})		
+	};
+
+	//Animate top menu clicks
+	scrollToElem($('#home'),$('#container'));
+	scrollToElem($('#toSizes'),$('#sizes'));
+	scrollToElem($('#toRealphotos'), $('#realphotos'));
+	scrollToElem($('#toPreorder'), $('#preorder'));
+	scrollToElem($('#toTestimonials'), $('#testimonials'));
+	scrollToElem($('#toAbout'), $('#about'));
 });
     </script>
 
@@ -465,13 +490,13 @@ var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + 
 	<!--#Facebook-->
 
 	<nav id="topMenu">
-		<img src="img/css/logo.png" class="logo">
+		<img src="img/css/logo.png" class="logo" id="home">
 		<div class="navMain">
-			<a href="">Looking for a bra?</a>
-			<a href="">Which size?</a>
-			<a href="">How they fit?</a>
-			<a href="">What other people say?</a>
-			<a href="">Our story</a>
+			<a href="#sizes" id="toSizes">Find your size</a>
+			<a href="#realphotos" id="toRealphotos">Check real pictures</a>
+			<a href="#preorder" id="toPreorder">Order now</a>
+			<a href="#testimonials" id="toTestimonials">Read the reviews</a>
+			<a href="#about" id="toAbout">Our story</a>
 			<div class="navSocial">
 				<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="dark"></div>
 			</div>
@@ -777,7 +802,7 @@ var braGalleryBreakpoint = $('#braGallery').offset().top - $(window).height() + 
 			</div>
 		</section>
 
-		<section class="grid4">
+		<section class="grid4" id="about">
 			<header>
 				<h1>Questions? Need advice?</h1>
 			</header>
