added .gitignore file

--- a/table.html
+++ b/table.html
@@ -847,26 +847,23 @@ $(document).ready(function(){
 					</div>
 					<h2>Our Story</h2>
 					
-					<p>As two quite well endowed sisters, 32H and 30GG (yup, sizes that Victoria's Secret has probably never heard about...), we've experienced the pain of shopping for bras that fit comfortably and look sexy. But we were extremely lucky to finally find brands and styles that make us feel really comfortable with our bodies.</p>					
-
-					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
+					<p>As two quite well endowed sisters (Victoria's Secret has probably never heard about 32H and 30GG...), we believe that <strong>every woman should be able to find bras that fit comfortably and look sexy</strong>.</p>		
 
 					<p>
 					Many women tend to think that if they don't fit into standard size charts, it means there is something wrong with their boobs - too small, too big, too perky, too saggy... But if you can't find a wellfitting bra, it just means that something is <strong>REALLY WRONG with the bras, and not you!</strong>
-					</p>
+					</p>			
 
+					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
 
-
-					<p>xoxo</p>
-					<p>&mdash;Julia & Amelia</p>
+					<p class="center">&hearts; Julia & Amelia &hearts;</p>
 					
 
 				</div>
 
 				<div class="grid3">
-					<h2>Email us at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or leave a comment here!</h2>
+					<h2>Drop us a line at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or leave a comment here!</h2>
 					<p></p>
-					<div class="fb-comments" data-href="http://wellfitting.com" data-width="700" data-num-posts="5"></div>
+					<div class="fb-comments" data-href="http://example.com" data-width="700" data-num-posts="5"></div>
 				</div>
 			</div>
 		</section>
