better real photos gallery

--- a/table.html
+++ b/table.html
@@ -557,85 +557,145 @@ $(document).ready(function(){
 		</section>
 
 		<section class="grid4" id="realphotos">
-			<header>
-				<h2>See how incredibly our bras fit real breasts.</h2>
-				<h1>Spectacular Uplift in Every Size!</h1>
-			</header>
-			
 			<div class="inner">
-				<figure class="grid1-6 thumbnail odd">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
-						<img src="img/30e-review.jpg">
-					</a>
-					<figcaption>
-						<h2>30E</h2>
-						<p>
-							underbust: 26.4in <br>
-							overbust: 35.8in
-						</p>
-					</figcaption>
-				</figure>
-				<figure class="grid1-6 thumbnail">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-7">
-						<img src="img/30hh-review.jpg">
-					</a>
-					<figcaption>
+				<div class="grid1 square">
+					<img src="img/30hh-review.jpg">
+					<div class="caption">
 						<h2>30HH</h2>
 						<p>
 							underbust: 27.2in <br>
 							overbust: 37in
 						</p>
-					</figcaption>
-				</figure>
-				<figure class="grid1-6 thumbnail">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-kelly">
-						<img src="img/34f-review.jpg">
+					</div>
+				</div>
+				<div class="grid1 square">
+					<h2>Spectacular Uplift in Over 65 Sizes!</h2>
+				</div>
+				<div class="grid1 square">
+					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
+						<img src="img/30e-review.jpg">
 					</a>
-					<figcaption>
-						<h2>34FF</h2>
+					<div class="caption">
+						<h2>30E</h2>
 						<p>
-							underbust: 28.7in <br>
-							overbust: 37.8in
+							underbust: 26.6in <br>
+							overbust: 35.8in
 						</p>
-					</figcaption>
-				</figure>
-				<figure class="grid1-6 thumbnail odd">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-jasmine">
-						<img src="img/32h-review.jpg">
-					</a>
-					<figcaption>
-						<h2>32H</h2>
-						<p>
-							underbust: 28.3in <br>
-							overbust: 38.2in
-						</p>
-					</figcaption>
-				</figure>
-				<figure class="grid1-6 thumbnail">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-juliette-4">
-						<img src="img/34ff-review.jpg">
-					</a>
-					<figcaption>
+					</div>
+				</div>
+				<div class="grid1 square">
+					<img src="img/34ff-review.jpg">
+					<div class="caption">
 						<h2>34FF</h2>
 						<p>
 							underbust: 30.3in <br>
 							overbust: 39in
 						</p>
-					</figcaption>
-				</figure>
-				<figure class="grid1-6 thumbnail">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-carmen-2">
-						<img src="img/34k-review.jpg">
-					</a>
-					<figcaption>
-						<h2>34K</h2>
+					</div>
+				</div>
+				<div class="grid1 square">
+					<img src="img/32h-review2.jpg">
+					<div class="caption">
+						<h2>32H</h2>
 						<p>
-							underbust: 29.5in <br>
-							overbust: 42.5in
+							underbust: 28.2in <br>
+							overbust: 39in
 						</p>
-					</figcaption>
-				</figure>
+					</div>
+				</div>
+				<div class="grid1 square">
+					<img src="img/34f-review3.jpg">
+					<div class="caption">
+						<h2>34FF</h2>
+						<p>
+							underbust: 28.7in <br>
+							overbust: 37.8in
+						</p>
+					</div>
+				</div>
+				<div class="grid1 square">
+					<h2>Spectacular Uplift in Over 65 Sizes!</h2>
+				</div>
+				<div class="grid1 square">
+					<img src="img/34f-review2.jpg">
+					<div class="caption">
+						<h2>34F</h2>
+						<p>
+							underbust: 30.3in <br>
+							overbust: 37in
+						</p>
+					</div>
+				</div>
 			</div>
+			
+		<!-- 	<figure class="grid1-6 thumbnail odd">
+				
+				<figcaption>
+					<h2>30E</h2>
+					<p>
+						underbust: 26.4in <br>
+						overbust: 35.8in
+					</p>
+				</figcaption>
+			</figure>
+			<figure class="grid1-6 thumbnail">
+				
+				<figcaption>
+					<h2>30HH</h2>
+					<p>
+						underbust: 27.2in <br>
+						overbust: 37in
+					</p>
+				</figcaption>
+			</figure>
+			<figure class="grid1-6 thumbnail">
+				<a href="http://balkonetka.pl/katalog/bra/comexim-kelly">
+					<img src="img/34f-review.jpg">
+				</a>
+				<figcaption>
+					<h2>34FF</h2>
+					<p>
+						underbust: 28.7in <br>
+						overbust: 37.8in
+					</p>
+				</figcaption>
+			</figure>
+			<figure class="grid1-6 thumbnail odd">
+				<a href="http://balkonetka.pl/katalog/bra/comexim-jasmine">
+					<img src="img/32h-review.jpg">
+				</a>
+				<figcaption>
+					<h2>32H</h2>
+					<p>
+						underbust: 28.3in <br>
+						overbust: 38.2in
+					</p>
+				</figcaption>
+			</figure>
+			<figure class="grid1-6 thumbnail">
+				<a href="http://balkonetka.pl/katalog/bra/comexim-juliette-4">
+					<img src="img/34ff-review.jpg">
+				</a>
+				<figcaption>
+					<h2>34FF</h2>
+					<p>
+						underbust: 30.3in <br>
+						overbust: 39in
+					</p>
+				</figcaption>
+			</figure>
+			<figure class="grid1-6 thumbnail">
+				<a href="http://balkonetka.pl/katalog/bra/comexim-carmen-2">
+					<img src="img/34k-review.jpg">
+				</a>
+				<figcaption>
+					<h2>34K</h2>
+					<p>
+						underbust: 29.5in <br>
+						overbust: 42.5in
+					</p>
+				</figcaption>
+			</figure> -->
 		</section>
 
 		
