--- a/table.html
+++ b/table.html
@@ -559,6 +559,16 @@ $(document).ready(function(){
 		<section class="grid4" id="realphotos">
 			<div class="inner">
 				<div class="grid1 square">
+					<img src="img/34f-review2.jpg">
+					<div class="caption">
+						<h2>34F</h2>
+						<p>
+							underbust: 30.3in <br>
+							overbust: 37in
+						</p>
+					</div>
+				</div>
+				<div class="grid1 square">
 					<img src="img/30hh-review.jpg">
 					<div class="caption">
 						<h2>30HH</h2>
@@ -569,19 +579,22 @@ $(document).ready(function(){
 					</div>
 				</div>
 				<div class="grid1 square">
-					<h2>Spectacular Uplift in Over 65 Sizes!</h2>
-				</div>
-				<div class="grid1 square">
-					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
-						<img src="img/30e-review.jpg">
-					</a>
+					<img src="img/34f-review3.jpg">
 					<div class="caption">
-						<h2>30E</h2>
+						<h2>34FF</h2>
 						<p>
-							underbust: 26.6in <br>
-							overbust: 35.8in
+							underbust: 28.7in <br>
+							overbust: 37.8in
 						</p>
 					</div>
+				</div>
+				<div class="grid1 square">
+					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
+					<img src="img/css/spectacular-uplift.png">
+				</div>
+				<div class="grid1 square">
+					<h2 class="nodisplay">Made in Poland. Now Available Worldwide.</h2>
+					<img src="img/css/made-in-poland.png">
 				</div>
 				<div class="grid1 square">
 					<img src="img/34ff-review.jpg">
@@ -604,98 +617,18 @@ $(document).ready(function(){
 					</div>
 				</div>
 				<div class="grid1 square">
-					<img src="img/34f-review3.jpg">
+					<a href="http://balkonetka.pl/katalog/bra/comexim-geisha-8">
+						<img src="img/30e-review.jpg">
+					</a>
 					<div class="caption">
-						<h2>34FF</h2>
+						<h2>30E</h2>
 						<p>
-							underbust: 28.7in <br>
-							overbust: 37.8in
-						</p>
-					</div>
-				</div>
-				<div class="grid1 square">
-					<h2>Spectacular Uplift in Over 65 Sizes!</h2>
-				</div>
-				<div class="grid1 square">
-					<img src="img/34f-review2.jpg">
-					<div class="caption">
-						<h2>34F</h2>
-						<p>
-							underbust: 30.3in <br>
-							overbust: 37in
+							underbust: 26.6in <br>
+							overbust: 35.8in
 						</p>
 					</div>
 				</div>
 			</div>
-			
-		<!-- 	<figure class="grid1-6 thumbnail odd">
-				
-				<figcaption>
-					<h2>30E</h2>
-					<p>
-						underbust: 26.4in <br>
-						overbust: 35.8in
-					</p>
-				</figcaption>
-			</figure>
-			<figure class="grid1-6 thumbnail">
-				
-				<figcaption>
-					<h2>30HH</h2>
-					<p>
-						underbust: 27.2in <br>
-						overbust: 37in
-					</p>
-				</figcaption>
-			</figure>
-			<figure class="grid1-6 thumbnail">
-				<a href="http://balkonetka.pl/katalog/bra/comexim-kelly">
-					<img src="img/34f-review.jpg">
-				</a>
-				<figcaption>
-					<h2>34FF</h2>
-					<p>
-						underbust: 28.7in <br>
-						overbust: 37.8in
-					</p>
-				</figcaption>
-			</figure>
-			<figure class="grid1-6 thumbnail odd">
-				<a href="http://balkonetka.pl/katalog/bra/comexim-jasmine">
-					<img src="img/32h-review.jpg">
-				</a>
-				<figcaption>
-					<h2>32H</h2>
-					<p>
-						underbust: 28.3in <br>
-						overbust: 38.2in
-					</p>
-				</figcaption>
-			</figure>
-			<figure class="grid1-6 thumbnail">
-				<a href="http://balkonetka.pl/katalog/bra/comexim-juliette-4">
-					<img src="img/34ff-review.jpg">
-				</a>
-				<figcaption>
-					<h2>34FF</h2>
-					<p>
-						underbust: 30.3in <br>
-						overbust: 39in
-					</p>
-				</figcaption>
-			</figure>
-			<figure class="grid1-6 thumbnail">
-				<a href="http://balkonetka.pl/katalog/bra/comexim-carmen-2">
-					<img src="img/34k-review.jpg">
-				</a>
-				<figcaption>
-					<h2>34K</h2>
-					<p>
-						underbust: 29.5in <br>
-						overbust: 42.5in
-					</p>
-				</figcaption>
-			</figure> -->
 		</section>
 
 		
@@ -816,8 +749,8 @@ $(document).ready(function(){
 
 		<section class="grid4" id="testimonials">
 			<header>
-				<h2>Bras that Get Tons of Wonderful Reviews!</h2>
-				<h1>Happy Customers All Over the World</h1>
+				<h2>Bras Famous for Wonderful Uplift</h2>
+				<h1>Praised by Bloggers All Over the World!</h1>
 			</header>
 			<div class="inner">
 				<div class="grid1">
@@ -881,7 +814,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="about">
 			<header>
-				<h1>Questions? Comments? Need advice?</h1>
+				<h1>Questions? Comments? Need Advice?</h1>
 			</header>
 			<div class="inner">
 				<div class="grid1" id="ourStory">
