--- a/table.html
+++ b/table.html
@@ -168,27 +168,37 @@ var KEYCODE_ESC = 27;
 
 $(document).ready(function(){	
 	//Overlay & Modals
-	//Show Overlay on click
-	$('#shippingPolicy').click(function(){
-		event.preventDefault();
-		//Set #modal top propoerty to 10% from scroll position
-		$('#modal').css('top', function(){
-			return $(window).scrollTop() + 100;
+	//Launch Modal with #content text when clicked on anchor
+	function launchModal(anchor, content) {
+		$(anchor).click(function(){
+			event.preventDefault();
+			//Retrieve content to be put in the #modal .inner 
+			var text = $(content).html()
+			//Set content of the #modal .inner
+			$('#modal .inner').html(text);
+			//Set #modal top propoerty to 10% from scroll position
+			$('#modal').css('top', function(){
+				return $(window).scrollTop() + 100;
+			});
+			//Set #overlay height to cover whole document
+			$('#overlay').css('height', function (){
+				return $(document).height();
+			});
+			$('#overlay').fadeIn();
 		});
-		//Set #overlay height to cover whole document
-		$('#overlay').css('height', function (){
-			return $(document).height();
+		$('#closeModal').click(function(){
+			$('#overlay').fadeOut();
 		});
-		$('#overlay').fadeIn();
-	});
+		$(document).keyup(function(e) {
+	  		if (e.keyCode == KEYCODE_ESC) { $('#closeModal').click(); } 
+		});
+	};
 
-	$('#closeModal').click(function(){
-		$('#overlay').fadeOut();
-	});
+	//Launch modals on anchor clicks
+	launchModal('#shippingPolicy', '#shippingPolicyText');
+	launchModal('#exchangeReturns', '#exchangeReturnsText');
+	launchModal('#aboutManufacturer', '#aboutManufacturerText');
 
-	$(document).keyup(function(e) {
-  		if (e.keyCode == KEYCODE_ESC) { $('#closeModal').click(); } 
-	});
 
 	
 	//Detect if element is visible on screen after scrolling
@@ -552,7 +562,6 @@ $(document).ready(function(){
 		<section class="grid4" id="firstFold">
 			<div class="inner">
 				<div class="grid4-6 typo"><h1 class="nodisplay">Can't Find a Wellfitting Bra?</h1></div>
-				<!-- <div class="scrollArrow">&#10095;</div>		 -->
 			</div>			
 		</section>
 
@@ -657,16 +666,31 @@ $(document).ready(function(){
 					<h3>Shipping & Delivery Times</h3>
 					<p>Free shipping with your home country postal service all over the US, Canada and Europe.</p>
 					<p><a href="" id="shippingPolicy">full shipping policy</a></p>
+
+					<div id="shippingPolicyText" class="nodisplay">
+						<h1>Shipping Policy</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 				</div>
 				<div class="grid2-6">
 					<h3>Exchange & Returns</h3>
 					<p>If your bra doesn't fit you or you just don't like it, you can simply return it within 60 days, or exchange for a different size.</p>
-					<p><a href="">full returns & exchange policy</a></p>
+					<p><a href="" id="exchangeReturns">full returns & exchange policy</a></p>
+
+					<div id="exchangeReturnsText" class="nodisplay">
+						<h1>Exchange & Returns</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 				</div>
 				<div class="grid2-6">
-					<h3>About the Brand</h3>
+					<h3>Meet the Designer!</h3>
 					<p>Your bra will be handcrafted specially for you, in a size that will fit you best, and shipped directly to you from the top-notch manufacturer in Poland. That's why it will reach you within 4 weeks from the moment you place your order.</p>
-					<p><a href="">about the manufacturer</a></p>
+					<p><a href="" id="aboutManufacturer">about the manufacturer</a></p>
+
+					<div id="aboutManufacturerText" class="nodisplay">
+						<h1>Exchange & Returns</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -896,15 +920,8 @@ $(document).ready(function(){
 	</div><!--#container-->
 	<div id="overlay">
 		<div id="modal" class="">
-			<a id="closeModal">close | x</a>
-			<h1>Aboy the Manufacturer</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a id="closeModal">close | x</a>	
+			<div class="inner"></div>
 		</div>
 	</div>
 </body>
