--- a/table.html
+++ b/table.html
@@ -558,14 +558,9 @@ $(document).ready(function(){
 
 		<section class="grid4" id="mainGallery">
 			<header>
-				<h2>Pick From Over 65 Sizes!</h2>
-				<span class="leftHalf grid2-6">
-					<h1>Big Bust?</h1>
-				</span>
-				<span class="grid2-6"><a href="" id="findYourSize"><span class="nodisplay">Find Your Size</span></a></span>
-				<span class="rightHalf grid2-6">
-					<h1>Small Bust?</h1>
-				</span>
+				
+				<img src="/img/ribbon.png">
+			
 
 			</header>
 			<div class="inner">
