--- a/table.html
+++ b/table.html
@@ -567,9 +567,9 @@ $(document).ready(function(){
 
 		<section class="grid4" id="mainGallery">
 			<header>
-				
-				<img src="/img/ribbon.png">
-			
+				<h1>Big Bust? Small Bust?</h1>	
+				<img src="/img/css/button1.png">
+				<h1>We Carry 65 Sizes!</h1>
 
 			</header>
 			<div class="inner">
