changed about to 2/1 proportions

--- a/table.html
+++ b/table.html
@@ -693,7 +693,14 @@ $(document).ready(function(){
 				<h1>Questions? Comments? Need Advice?</h1>
 			</header>
 			<div class="inner">
-				<div class="grid1" id="ourStory">
+				<div class="grid4-6" id="comments">
+					<h2>Drop us a Line at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or...
+						<br>Leave a Comment Here!</h2>
+					<p></p>
+					<div class="fb-comments" data-href="http://wellfitting.com" data-width="580"></div>
+					<div class="fb-like-box" data-href="https://www.facebook.com/wellfitting" data-width="580" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>
+				</div>
+				<div class="grid2-6" id="ourStory">
 					<div class="center">
 						<img src="img/julia.png" class="face julia" title="Julia">
 						<img src="img/amelia.png" class="face amelia" title="Amelia">
@@ -709,22 +716,28 @@ $(document).ready(function(){
 					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
 
 					<p class="right">&hearts; Julia & Amelia &hearts;</p>
-					
-
-				</div>
-
-				<div class="grid3">
-					<h2>Drop us a line at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or leave a comment here!</h2>
-					<p></p>
-					<div class="fb-comments" data-href="http://example.com" data-width="700" data-num-posts="5"></div>
 				</div>
 			</div>
 		</section>
 
-		<footer>
-			&copy; Wellfitting.com 2013 | hello@wellfitting.com
+		<footer class="">
+			<div class="inner">
+				<div class="grid2-6">
+					<h3>Terms of Service</h3>
+					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+				</div>
+				<div class="grid2-6">
+					<h3>About</h3>
+					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+				</div>
+				<div class="grid2-6">
+					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+				</div>
+			</div>
 		</footer>
 	</div><!--#container-->
+
+	<!--OVERLAY-->
 	<div id="overlay">
 		<div id="modal" class="">
 			<a id="closeModal">close | x</a>	
