--- a/table.html
+++ b/table.html
@@ -433,37 +433,70 @@ $(document).ready(function(){
 				<div class="middleWrap"><h1>Small Bust?</h1></div>
 			</header>
 			<div class="inner">
-				<div class="grid1 circle">
+				<div class="grid1 braThumb">
 					<img src="img/bras/lychee-sorbet.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/summer-time.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/free-time.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/juliette.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/mint-sorbet.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
 				</div>
 				
-				<div class="grid1 circle">
-					<img src="img/bras/mint-sorbet.png">
-				</div>
-
-				<div class="grid1 circle">
-					<img src="img/bras/free-time.png">
-				</div>
-
-				<div class="grid1 circle">
-					<img src="img/bras/summer-time.png">
-				</div>
-
-				<div class="grid1 circle">
-					<img src="img/bras/kelly.png">
-				</div>
-
-				<div class="grid1 circle">
-					<img src="img/bras/jasmine.png">
-				</div>
-
-				<div class="grid1 circle">
-					<img src="img/bras/juliette.png">
-				</div>
-
-				<div class="grid1 circle">
+				<div class="grid1 braThumb">
 					<img src="img/bras/geisha.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
 				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/jasmine.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
+				<div class="grid1 braThumb">
+					<img src="img/bras/kelly.png">
+					<figcaption>
+						<h3>Curvy Kelly</h3>
+						<small>$65 | <a href="#">view &#65515;</a></small>
+					</figcaption>
+				</div>
+
 			</div>
 		</section>
 		
