social icons in footer

--- a/table.html
+++ b/table.html
@@ -415,7 +415,7 @@ $(document).ready(function(){
 		<nav id="topMenu">
 			<a href="#container" id="home" class="logo"><img src="img/css/logo.png"></a>
 			<div class="navMain">
-				<a href="#mainGallery" id="toMainGallery">Our Bras</a>
+				<a href="#mainGallery" id="toMainGallery">Our Bras</a> &hearts;
 				<a href="#sizes" id="toSizes">Find Your Size</a>
 				<a href="#preorder" id="toPreorder">Order Now!</a>
 				<a href="#realphotos" id="toRealphotos">Real Pictures</a>
@@ -757,16 +757,25 @@ $(document).ready(function(){
 			<div class="inner">
 				<div class="grid2-6">
 					<h3>Terms of Service</h3>
-					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+					<ul>
+						<li><a href="">Shipping Policy</a></li>
+						<li><a href="">Returns & Exchange</a></li>
+						<li><a href="">About the Manufacturer</a></li>
+					</ul>
 				</div>
 				<div class="grid2-6">
 					<h3>About</h3>
-					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+					<a href="mailto:hello@wellfitting.com">Contact</a>
 				</div>
-				<div class="grid2-6">
-					&copy; Wellfitting.com 2013 | hello@wellfitting.com
+				<div class="grid2-6 socialIcons">
+					<a href="http://www.facebook.com/wellfitting" class="fb" target="_blank"><span class="nodisplay"></span></a>
+					<a href="https://twitter.com/wellfitting" class="twitter" target="_blank"><span class="nodisplay"></span></a>
+					<a href="http://instagram.com/wellfitting" class="instagram" target="_blank"><span class="nodisplay"></span></a>
+					<a href="http://pinterest.com/wellfitting/" class="pinterest" target="_blank"><span class="nodisplay"></span></a>
 				</div>
+				<small>&copy; Wellfitting Inc. 2013</small>
 			</div>
+			
 		</footer>
 	</div><!--#container-->
 
