--- a/table.html
+++ b/table.html
@@ -748,7 +748,7 @@ $(document).ready(function(){
 
 					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
 
-					<p class="right">&hearts; Julia & Amelia &hearts;</p>
+					<img src="/img/signature.png">
 				</div>
 			</div>
 		</section>
