added proper bra names

--- a/table.html
+++ b/table.html
@@ -436,7 +436,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/lychee-sorbet.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Lychee Sorbet</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -444,7 +444,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/summer-time.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Summer Time</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -452,7 +452,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/free-time.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Free Time</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -460,7 +460,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/juliette.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Juliette</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -468,7 +468,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/mint-sorbet.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Mint Sorbet</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -476,7 +476,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/geisha.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Geisha</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -484,7 +484,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/jasmine.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Jasmine</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -492,7 +492,7 @@ $(document).ready(function(){
 				<div class="grid1 braThumb">
 					<img src="img/bras/kelly.png">
 					<figcaption>
-						<h3>Curvy Kelly</h3>
+						<h3>Kelly</h3>
 						<small>$65 | <a href="#">view &#65515;</a></small>
 					</figcaption>
 				</div>
@@ -748,7 +748,7 @@ $(document).ready(function(){
 
 					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
 
-					<img src="/img/signature.png">
+					<img src="img/signature.png">
 				</div>
 			</div>
 		</section>
