added header to real pics

--- a/table.html
+++ b/table.html
@@ -587,6 +587,10 @@ $(document).ready(function(){
 		</section>
 
 		<section class="grid4" id="realphotos">
+			<header>
+				<h2>Amazing Fit for the Curvy & Fabulous</h2>
+				<h1>As Seen on Real Women!</h1>
+			</header>
 			<div class="inner">
 				<div class="grid1 square">
 					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
