--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   	<link href='http://fonts.googleapis.com/css?family=Clicker+Script|EB+Garamond' rel='stylesheet' type='text/css'>
+  	<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic' rel='stylesheet' type='text/css'>
     <script type="text/javascript">
 var bands = [
 		    	{
@@ -415,22 +416,23 @@ $(document).ready(function(){
 		<nav id="topMenu">
 			<a href="#container" id="home" class="logo"><img src="img/css/logo.png"></a>
 			<div class="navMain">
-				<a href="#mainGallery" id="toMainGallery">Our Bras</a> &hearts;
-				<a href="#sizes" id="toSizes">Find Your Size</a>
-				<a href="#preorder" id="toPreorder">Order Now!</a>
-				<a href="#realphotos" id="toRealphotos">Real Pictures</a>
-				<a href="#testimonials" id="toTestimonials">Awesome Reviews</a>
-				<a href="#about" id="toAbout">Need Advice?</a>
+				<a class="grid1-6" href="#mainGallery" id="toMainGallery">OUR BRAS</a>
+				<a class="grid1-6" href="#sizes" id="toSizes">FIND YOUR SIZE</a>
+				<a class="grid1-6" href="#preorder" id="toPreorder">ORDER NOW!</a>
+				<a class="grid1-6" href="#realphotos" id="toRealphotos">REAL PICTURES</a>
+				<a class="grid1-6" href="#testimonials" id="toTestimonials">TRUE REVIEWS</a>
+				<a class="grid1-6" href="#about" id="toAbout">NEED ADVICE?</a>
+			</div>
 				<div class="navSocial">
-					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="dark"></div>
+					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="dark">
 				</div>
 			</div>	
 		</nav>
 		<section class="grid4" id="mainGallery">
 			<header>
-				<div class="middleWrap"><h1>Big Bust?</h1></div>
+				<div class="middleWrap"><h1>Big bust?</h1></div>
 				<div class="middle"><a href="#sizes" id="findYourSize"><img src="img/css/button1.png"></a></div>
-				<div class="middleWrap"><h1>Small Bust?</h1></div>
+				<div class="middleWrap"><h1>Small bust?</h1></div>
 			</header>
 			<div class="inner">
 				<div class="grid1 braThumb">
@@ -538,7 +540,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="preorder">
 			<header>
-				<h2>Accepting Orders Only Until August 30!</h2>
+				<h2>Accepting orders only until August 30!</h2>
 				<h1>Order Your Bra Today!</h1>
 				<button class="button-huge">
 					<div>
@@ -670,7 +672,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="testimonials">
 			<header>
-				<h2>Bras Famous for Wonderful Uplift</h2>
+				<h2>Bras famous for wonderful uplift</h2>
 				<h1>Praised by Bloggers All Over the World!</h1>
 			</header>
 			<div class="inner">
@@ -731,8 +733,7 @@ $(document).ready(function(){
 			</header>
 			<div class="inner">
 				<div class="grid4-6" id="comments">
-					<h2>Drop us a Line at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or...
-						<br>Leave a Comment Here!</h2>
+					<h2>Drop us a line at <a href="mailto:hello@wellfitting.com">hello@wellfitting.com</a> or... leave a comment here!</h2>
 					<p></p>
 					<div class="fb-comments" data-href="http://wellfitting.com" data-width="580"></div>
 					<div class="fb-like-box" data-href="https://www.facebook.com/wellfitting" data-width="580" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>
@@ -752,7 +753,7 @@ $(document).ready(function(){
 
 					<p>We want to help women of <strong>all shapes and sizes</strong> find bras that fit them perfectly well.</p>
 
-					<img src="img/signature.png">
+					<img src="img/signature.png" width="260px">
 				</div>
 			</div>
 		</section>
