--- a/table.html
+++ b/table.html
@@ -414,7 +414,7 @@ $(document).ready(function(){
 		</section>
 
 		<nav id="topMenu">
-			<a href="#container" id="home" class="logo"><img src="img/css/logo.png"></a>
+			<a href="#container" id="home" class="logo"><img src="img/css/logo.png" ></a>
 			<div class="navMain">
 				<a class="grid1-6" href="#mainGallery" id="toMainGallery">OUR BRAS</a>
 				<a class="grid1-6" href="#sizes" id="toSizes">FIND YOUR SIZE</a>
@@ -590,7 +590,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="realphotos">
 			<header>
-				<h2>Amazing Fit for the Curvy & Fabulous</h2>
+				<h2>Amazing fit for the curvy & fabulous</h2>
 				<h1>As Seen on Real Women!</h1>
 			</header>
 			<div class="inner">
