avatars updated, Real Pictures section improved

--- a/table.html
+++ b/table.html
@@ -416,12 +416,12 @@ $(document).ready(function(){
 		<nav id="topMenu">
 			<a href="#container" id="home" class="logo"><img src="img/css/logo.png" ></a>
 			<div class="navMain">
-				<a class="grid1-6" href="#mainGallery" id="toMainGallery">OUR BRAS</a>
-				<a class="grid1-6" href="#sizes" id="toSizes">FIND YOUR SIZE</a>
-				<a class="grid1-6" href="#preorder" id="toPreorder">ORDER NOW!</a>
-				<a class="grid1-6" href="#realphotos" id="toRealphotos">REAL PICTURES</a>
-				<a class="grid1-6" href="#testimonials" id="toTestimonials">TRUE REVIEWS</a>
-				<a class="grid1-6" href="#about" id="toAbout">NEED ADVICE?</a>
+				<a class="grid1-6" href="#mainGallery" id="toMainGallery">our bras</a>
+				<a class="grid1-6" href="#sizes" id="toSizes">find your size</a>
+				<a class="grid1-6" href="#preorder" id="toPreorder">order now!</a>
+				<a class="grid1-6" href="#realphotos" id="toRealphotos">real pictures</a>
+				<a class="grid1-6" href="#testimonials" id="toTestimonials">true reviews</a>
+				<a class="grid1-6" href="#about" id="toAbout">need advice?</a>
 			</div>
 				<div class="navSocial">
 					<div class="fb-like" data-href="http://facebook.com/wellfitting" data-send="false" data-layout="button_count" data-show-faces="true" data-colorscheme="dark">
