real photos gallery updated

--- a/table.html
+++ b/table.html
@@ -590,7 +590,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="realphotos">
 			<header>
-				<h2>Amazing fit for the curvy & fabulous</h2>
+				<h2>Amazing fit for the curvy & fabulous.</h2>
 				<h1>As Seen on Real Women!</h1>
 			</header>
 			<div class="inner">
@@ -672,7 +672,7 @@ $(document).ready(function(){
 
 		<section class="grid4" id="testimonials">
 			<header>
-				<h2>Bras famous for wonderful uplift</h2>
+				<h2>Bras famous for wonderful uplift.</h2>
 				<h1>Praised by Bloggers All Over the World!</h1>
 			</header>
 			<div class="inner">
