--- a/table.html
+++ b/table.html
@@ -542,15 +542,8 @@ $(document).ready(function(){
 			<header>
 				<h2>Accepting orders only until August 30!</h2>
 				<h1>Order Your Bra Today!</h1>
-				<button class="button-huge">
-					<div>
-						 Buy Now
-						<br>
-						<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
-					</div>
-				</button>
-				
-			</header>
+				<img href="" src="/img/css/button2.png">
+				</header>
 			<div class="inner">
 				<div class="grid2-6">
 					<span class="icon shipping"></span>
