--- a/table.html
+++ b/table.html
@@ -502,13 +502,15 @@ $(document).ready(function(){
 			</div>
 		</section>
 		
-		<section class="grid4" id="sizes">
+		<section class="grid1" id="sizes">
 			<header>
 				<h2>Big bust? Small bust? Stop thinking you're weirdly shaped!</h2>
 				<h1>Fabulous Fit in Over 65 Sizes!</h1>
 			</header>
 			<div class="inner">
-				<div id="sizeCalculator" class="grid2">
+				<div id="illustration">
+				</div>
+				<div id="sizeCalculator">
 					<h3>Holy cannoli! Which size will fit me?</h3>
 					<form>
 						<label>Underbust:</label>
