html for size section added

--- a/table.html
+++ b/table.html
@@ -508,35 +508,70 @@ $(document).ready(function(){
 				<h1>Fabulous Fit in Over 65 Sizes!</h1>
 			</header>
 			<div class="inner">
-				<div id="illustration">
-				</div>
-				<div id="sizeCalculator">
-					<h3>Holy cannoli! Which size will fit me?</h3>
-					<form>
-						<label>Underbust:</label>
-						<small class="sliderLeftLabel">22.8</small>
-						<small class="sliderRightLabel">36.2</small>
-						<div id="underbust" class="slider"></div>
-
-						<span id="underbustLabel" class="sliderLabel"></span>
-						
-						<label>Overbust:</label>
-						<small class="sliderLeftLabel">29.1</small>
-						<small class="sliderRightLabel">46.5</small>
-						<div id="overbust" class="slider"></div>
-						<span id="overbustLabel" class="sliderLabel"></span>
-						
-						<button id="calculateSize" class="button" >Show My Size &#65515;</button>
-						<div id="sizeSuggestion"></div>
-					</form>
-				</div>
-
-				<div class="grid2">
-					<div id="sizeTable">
-						<h3>Size Chart</h3>
-						<small>Highlight a size to see exact measurements</small>
+				<section>
+					<div class="grid2">
+						<div class="illustration illustration1"></div>
 					</div>
-				</div>
+					<div class="grid2">
+						<h2>We offer 65 sizes</h2>
+						<p>Lorem ipsum smipsum</p>
+						<p>Ready? You will need just:</p>
+						<ul>
+							<li>a measuring tape</li>
+							<li>2 minutes of your time</li>
+							<li>good mood:)</li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<div class="grid2">
+						<h2>Step 1</h2>
+						<h3>Measure your underbust</h3>
+						<p>Lorem ipsum smipsum</p>
+						<p>Lorem ipsum smipsum</p>
+						<form class="sizeCalculator">
+							<label>Underbust:</label>
+							<small class="sliderLeftLabel">22.8</small>
+							<small class="sliderRightLabel">36.2</small>
+							<div id="underbust" class="slider"></div>
+							<span id="underbustLabel" class="sliderLabel"></span>
+						</form>
+					</div>
+					<div class="grid2">
+						<div class="illustration illustration2"></div>
+					</div>
+				</section>
+				<section>
+					<div class="grid2">
+						<div class="illustration illustration3"></div>
+					</div>
+					<div class="grid2">
+						<h2>Step 2</h2>
+						<h3>Measure your overbust</h3>
+						<p>Lorem ipsum smipsum</p>
+						<p>Lorem ipsum smipsum</p>
+						<form class="sizeCalculator">
+							<label>Overbust:</label>
+							<small class="sliderLeftLabel">29.1</small>
+							<small class="sliderRightLabel">46.5</small>
+							<div id="overbust" class="slider"></div>
+							<span id="overbustLabel" class="sliderLabel"></span>
+							<button id="calculateSize" class="button" >Show My Size &#65515;</button>
+						</form>
+					</div>
+				</section>
+
+				<section>
+					<div id="sizeCalculator" class="grid2">
+						<h1><div id="sizeSuggestion"></div></h1>
+					</div>
+					<div class="grid2">
+						<div id="sizeTable">
+							<h3>Size Chart</h3>
+							<small>Highlight a size to see exact measurements</small>
+						</div>
+					</div>
+				</section>
 			</div>
 		</section>
 
