button huge changed

--- a/table.html
+++ b/table.html
@@ -544,7 +544,13 @@ $(document).ready(function(){
 			<header>
 				<h2>Accepting orders only until August 30!</h2>
 				<h1>Order Your Bra Today!</h1>
-				<img href="" src="/img/css/button2.png">
+				<button class="button-huge">
+					<div>Buy Now
+					<br>
+					<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
+				</div>
+			</button>
+
 				</header>
 			<div class="inner">
 				<div class="grid2-6">
