--- a/table.html
+++ b/table.html
@@ -430,9 +430,11 @@ $(document).ready(function(){
 		</nav>
 		<section class="grid4" id="mainGallery">
 			<header>
-				<div class="middleWrap"><h1>Big bust?</h1></div>
+				<h2>Bigger bust and slimmer chest?</h2>
+				<h1>Fabulous Fit in Over 65 Sizes!</h1>
+				<!-- <div class="middleWrap"><h1>Big bust?</h1></div>
 				<div class="middle"><a href="#sizes" id="findYourSize"><img src="img/css/button1.png"></a></div>
-				<div class="middleWrap"><h1>Small bust?</h1></div>
+				<div class="middleWrap"><h1>Small bust?</h1></div> -->
 			</header>
 			<div class="inner">
 				<div class="grid1 braThumb">
@@ -502,76 +504,50 @@ $(document).ready(function(){
 			</div>
 		</section>
 		
-		<section class="grid1" id="sizes">
+		<section class="grid4" id="sizes">
 			<header>
-				<h2>Big bust? Small bust? Stop thinking you're weirdly shaped!</h2>
-				<h1>Fabulous Fit in Over 65 Sizes!</h1>
+				<h2>Like the bras?</h2>
+				<h1>Now Find your Wellfitting Size!</h1>
 			</header>
 			<div class="inner">
-				<section>
-					<div class="grid2">
-						<div class="illustration illustration1"></div>
+				<div class="grid2">
+					<h2>Underbust</h2>
+					<p>Lorem ipsum smipsum</p>
+					<p>Lorem ipsum smipsum</p>
+					<form class="sizeCalculator">
+						<label>Underbust:</label>
+						<small class="sliderLeftLabel">22.8</small>
+						<small class="sliderRightLabel">36.2</small>
+						<div id="underbust" class="slider"></div>
+						<span id="underbustLabel" class="sliderLabel"></span>
+					</form>
+				</div>
+				<div class="grid2">
+					<h2>Overbust</h2>
+					<h3>Measure your boob</h3>
+					<p>Lorem ipsum smipsum</p>
+					<p>Lorem ipsum smipsum</p>
+					<form class="sizeCalculator">
+						<label>Overbust:</label>
+						<small class="sliderLeftLabel">29.1</small>
+						<small class="sliderRightLabel">46.5</small>
+						<div id="overbust" class="slider"></div>
+						<span id="overbustLabel" class="sliderLabel"></span>
+					</form>
+				</div>
+				<div class="grid4 calculateSizeSection">
+					<button id="calculateSize" class="button" >Show My Size &#65515;</button>
+				</div>
+				<div class="grid2">
+					<div id="sizeTable">
+						<h3>Size Chart</h3>
+						<small>Highlight a size to see exact measurements</small>
 					</div>
-					<div class="grid2">
-						<h2>We offer 65 sizes</h2>
-						<p>Lorem ipsum smipsum</p>
-						<p>Ready? You will need just:</p>
-						<ul>
-							<li>a measuring tape</li>
-							<li>2 minutes of your time</li>
-							<li>good mood:)</li>
-						</ul>
-					</div>
-				</section>
-				<section>
-					<div class="grid2">
-						<h2>Step 1</h2>
-						<h3>Measure your underbust</h3>
-						<p>Lorem ipsum smipsum</p>
-						<p>Lorem ipsum smipsum</p>
-						<form class="sizeCalculator">
-							<label>Underbust:</label>
-							<small class="sliderLeftLabel">22.8</small>
-							<small class="sliderRightLabel">36.2</small>
-							<div id="underbust" class="slider"></div>
-							<span id="underbustLabel" class="sliderLabel"></span>
-						</form>
-					</div>
-					<div class="grid2">
-						<div class="illustration illustration2"></div>
-					</div>
-				</section>
-				<section>
-					<div class="grid2">
-						<div class="illustration illustration3"></div>
-					</div>
-					<div class="grid2">
-						<h2>Step 2</h2>
-						<h3>Measure your overbust</h3>
-						<p>Lorem ipsum smipsum</p>
-						<p>Lorem ipsum smipsum</p>
-						<form class="sizeCalculator">
-							<label>Overbust:</label>
-							<small class="sliderLeftLabel">29.1</small>
-							<small class="sliderRightLabel">46.5</small>
-							<div id="overbust" class="slider"></div>
-							<span id="overbustLabel" class="sliderLabel"></span>
-							<button id="calculateSize" class="button" >Show My Size &#65515;</button>
-						</form>
-					</div>
-				</section>
-
-				<section>
-					<div id="sizeCalculator" class="grid2">
-						<h1><div id="sizeSuggestion"></div></h1>
-					</div>
-					<div class="grid2">
-						<div id="sizeTable">
-							<h3>Size Chart</h3>
-							<small>Highlight a size to see exact measurements</small>
-						</div>
-					</div>
-				</section>
+				</div>
+				<div id="sizeCalculator" class="grid2">
+					Your size
+					<h1><div id="sizeSuggestion"></div></h1>
+				</div>
 			</div>
 		</section>
 
