--- a/table.html
+++ b/table.html
@@ -506,16 +506,26 @@ $(document).ready(function(){
 		
 		<section class="grid4" id="sizes">
 			<header>
-				<h2>Like the bras?</h2>
-				<h1>Now Find your Wellfitting Size!</h1>
+				<h2>Like our bras? Get the spectacular uplift in your size!</h2>
+				<h1>Find your Wellfitting Size Now!</h1>
 			</header>
 			<div class="inner">
 				<div class="grid2">
 					<h2>Underbust</h2>
-					<p>Lorem ipsum smipsum</p>
-					<p>Lorem ipsum smipsum</p>
+					<div>
+						<div class="illustration illustration1 half"></div>
+						<div class="half">
+							<p><strong>90% of bra support is in the band</strong>, which lays under your bust.</p>
+							<ul>
+								<li>Pull a measuring tape tight</li>
+								<li>Just under your bust</li>
+								<li>Keep it level around your ribcage</li>
+								<li><strong>Do not round</strong> to the next whole number &mdash; get an accurate reading of your underbust measurement.</li>
+							</ul>
+						</div>
+					</div>
 					<form class="sizeCalculator">
-						<label>Underbust:</label>
+						<label>Your Underbust:</label>
 						<small class="sliderLeftLabel">22.8</small>
 						<small class="sliderRightLabel">36.2</small>
 						<div id="underbust" class="slider"></div>
@@ -524,11 +534,19 @@ $(document).ready(function(){
 				</div>
 				<div class="grid2">
 					<h2>Overbust</h2>
-					<h3>Measure your boob</h3>
-					<p>Lorem ipsum smipsum</p>
-					<p>Lorem ipsum smipsum</p>
+					<div>
+						<div class="illustration illustration1 half"></div>
+						<div class="half">
+							<p>With your current bra on, measure over your bust.</p>
+							<ul>
+								<li>Stand straight and take a good, deep breath</li>
+								<li>Pull the tape loosely over the <strong>fullest</strong> part of your bust</li>
+								<li>Make sure the tape is level around your body.</li>
+							</ul>
+						</div>
+					</div>
 					<form class="sizeCalculator">
-						<label>Overbust:</label>
+						<label>Your Overbust:</label>
 						<small class="sliderLeftLabel">29.1</small>
 						<small class="sliderRightLabel">46.5</small>
 						<div id="overbust" class="slider"></div>
