--- a/table.html
+++ b/table.html
@@ -507,35 +507,38 @@ $(document).ready(function(){
 		<section class="grid4" id="sizes">
 			<header>
 				<h2>Like our bras? Get the spectacular uplift in your size!</h2>
-				<h1>Find your Wellfitting Size Now!</h1>
+				<h1>Find your Size in 2 Quick Steps!</h1>
 			</header>
 			<div class="inner">
 				<div class="grid2">
-					<h2>Underbust</h2>
-					<div>
-						<div class="illustration illustration1 half"></div>
+					<div class="innerWrapper">
+						<div class="illustration illustration1 half">
+							<h2>Underbust</h2>
+						</div>
 						<div class="half">
-							<p><strong>90% of bra support is in the band</strong>, which lays under your bust.</p>
+							<p>90% of bra support is in the band, which lays under your bust.</p>
 							<ul>
 								<li>Pull a measuring tape tight</li>
 								<li>Just under your bust</li>
 								<li>Keep it level around your ribcage</li>
-								<li><strong>Do not round</strong> to the next whole number &mdash; get an accurate reading of your underbust measurement.</li>
+								<li><strong>Do not round</strong> to the next whole number &mdash; get an accurate reading.</li>
 							</ul>
 						</div>
 					</div>
 					<form class="sizeCalculator">
 						<label>Your Underbust:</label>
+						<span id="underbustLabel" class="sliderLabel"></span>
 						<small class="sliderLeftLabel">22.8</small>
 						<small class="sliderRightLabel">36.2</small>
 						<div id="underbust" class="slider"></div>
-						<span id="underbustLabel" class="sliderLabel"></span>
+						
 					</form>
 				</div>
 				<div class="grid2">
-					<h2>Overbust</h2>
-					<div>
-						<div class="illustration illustration1 half"></div>
+					<div class="innerWrapper">
+						<div class="illustration illustration1 half">
+							<h2>Overbust</h2>
+						</div>
 						<div class="half">
 							<p>With your current bra on, measure over your bust.</p>
 							<ul>
@@ -547,15 +550,18 @@ $(document).ready(function(){
 					</div>
 					<form class="sizeCalculator">
 						<label>Your Overbust:</label>
+						<span id="overbustLabel" class="sliderLabel"></span>
 						<small class="sliderLeftLabel">29.1</small>
 						<small class="sliderRightLabel">46.5</small>
 						<div id="overbust" class="slider"></div>
-						<span id="overbustLabel" class="sliderLabel"></span>
+						
 					</form>
 				</div>
-				<div class="grid4 calculateSizeSection">
-					<button id="calculateSize" class="button" >Show My Size &#65515;</button>
-				</div>
+			</div>
+			<div class="grid4 calculateSizeSection">
+				<button id="calculateSize" class="button-huge" >Ready &#65515;</button>
+			</div>
+			<div class="inner">
 				<div class="grid2">
 					<div id="sizeTable">
 						<h3>Size Chart</h3>
@@ -563,7 +569,7 @@ $(document).ready(function(){
 					</div>
 				</div>
 				<div id="sizeCalculator" class="grid2">
-					Your size
+					<h1>Your size</h1>
 					<h1><div id="sizeSuggestion"></div></h1>
 				</div>
 			</div>
